--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">BLERSSIStrengthTest</string>
+    <string name="app_name">RSSI Graph</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_select_bledevice">SelectBLEDeviceActivity</string>
+    <string name="title_activity_select_bledevice">Select BLE device</string>
 </resources>
